<resources>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="app_name">PayAnywhere1</string>
    <string name="camera">Camera</string>
    <string name="select_folder">Select Folder</string>
    <string name="select_image">Select Image</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="ok">OK</string>
    <string name="textOn">ON</string>
    <string name="textOff">OFF</string>
    <string name="GENERAL_EXCEPTION">General Exception</string>
    <string name="OTHER_EXCEPTION">Other Exception</string>
    <string name="currently_syncing_data">Currently syncing data.</string>
    <string name="syncing_data">Syncing data…</string>
    <string name="cat_shoes">Shoes</string>
    <string name="cat_tops">Tops</string>
    <string name="cat_accessories">Accessories</string>
    <string name="cat_bottoms">Bottoms</string>
    <string name="tag_black">Black</string>
    <string name="tag_boots">Boots</string>
    <string name="tag_pumps">Pumps</string>
    <string name="tag_dress">Dress</string>
    <string name="tag_red">Red</string>
    <string name="tag_sandals">Sandals</string>
    <string name="tag_casual">Casual</string>
    <string name="tag_yellow">Yellow</string>
    <string name="tag_white">White</string>
    <string name="tag_printed">Printed</string>
    <string name="tag_blue">Blue</string>
    <string name="tag_jewelry">Jewelry</string>
    <string name="tag_scarves">Scarves</string>
    <string name="tag_eyewear">Eyewear</string>
    <string name="tag_denim">Denim</string>
    <string name="tag_pants">Pants</string>
    <string name="tag_shorts">Shorts</string>
    <string name="tag_skirts">Skirts</string>
    <string name="name_boots">Tall Boots</string>
    <string name="name_black_pumps">Black Pumps</string>
    <string name="name_red_pumps">Red Pumps</string>
    <string name="name_flipflops">Flip Flops</string>
    <string name="name_gold_sandals">Gold Sandals</string>
    <string name="name_white_tshirt">White T-Shirt</string>
    <string name="name_printed_blouse">Printed Blouse</string>
    <string name="name_blue_dress">Blue Dress</string>
    <string name="name_plaid_shirt">Plaid Shirt</string>
    <string name="name_white_tank">White Tank</string>
    <string name="name_ring">Ring</string>
    <string name="name_earrings">Earrings</string>
    <string name="name_statement_necklace">Statement Necklace</string>
    <string name="name_red_scarf">Red Scarf</string>
    <string name="name_black_sunglasses">Black Sunglasses</string>
    <string name="name_bootcut_jeans">Bootcut Jeans</string>
    <string name="name_leggings">Leggings</string>
    <string name="name_cutoff_shorts">Cutoff Shorts</string>
    <string name="name_white_pants">White Pants</string>
    <string name="name_grey_dress_skirt">Grey Dress Skirt</string>
    <string name="desc_boots">Black, Size 8</string>
    <string name="desc_black_pumps">Black, Size 7</string>
    <string name="desc_red_pumps">Red, Size 7</string>
    <string name="desc_flipflops">Black, Size 6.5</string>
    <string name="desc_gold_sandals">Gold, Size 6</string>
    <string name="desc_white_tshirt">White, Size XS</string>
    <string name="desc_printed_blouse">Floral, Size S</string>
    <string name="desc_blue_dress">Blue, Size M</string>
    <string name="desc_plaid_shirt">Blue, Size L</string>
    <string name="desc_white_tank">White, Size S</string>
    <string name="desc_ring">Silver, Size 6</string>
    <string name="desc_earrings">Silver</string>
    <string name="desc_statement_necklace">Pink, 30 length</string>
    <string name="desc_red_scarf">Red, One Size</string>
    <string name="desc_black_sunglasses">Black, Tinted Lenses</string>
    <string name="desc_bootcut_jeans">Dark Wash, Slim, 27</string>
    <string name="desc_leggings">Black, Size S</string>
    <string name="desc_cutoff_shorts">Medium Dark Wash, 29</string>
    <string name="desc_white_pants">White, Size M</string>
    <string name="desc_grey_dress_skirt">Grey, Size 2</string>
    <string name="ps_receipt_name">"Erica's Boutique"</string>
    <string name="ps_receipt_address">1234 Main Street</string>
    <string name="ps_receipt_city">Anywhere</string>
    <string name="ps_receipt_state">MI</string>
    <string name="ps_receipt_zip">48000</string>
    <string name="ps_receipt_phone">310–555–0100</string>
    <string name="ps_receipt_web">ericasboutique.com</string>
    <string name="ps_receipt_email">info@ericasboutique.com</string>
    <string name="ps_receipt_message">Please visit ericasboutique.com to check for New Arrivals and Sales!</string>
    <string name="ps_receipt_disclaimer">"Return Policy
Customers can return items within 21 days for store credit. Returns must be in new, unworn, and unwashed condition with tags attached."</string>
    <string name="ps_receipt_footer">"Accept credit cards on your phone or tablet
Visit phoneSWIPE.com to learn more"</string>
    <string name="ps_receipt_country">USA</string>
    <string name="buy_3_get_15_percent_off">Buy 3 Accessories Get 15% Off!</string>
    <string name="note_tailor">Tailor previously purchased dress</string>
    <string name="tailoring">Tailoring</string>
    <string name="boot_sale">Get 10% off entire purchase when you purchase 2 or more pair of jeans!</string>
    <string name="accessory_sale">Accessory Sale!</string>
    <string name="pants_sale">Take $25 off any two pair of pants!</string>
    <string name="dress_pants">Dress Pants</string>
    <string name="cat_sandwiches">Sandwiches</string>
    <string name="cat_daily_specials">Daily Specials</string>
    <string name="cat_beverages">Beverages</string>
    <string name="cat_soups">Soups</string>
    <string name="cat_salads">Salads</string>
    <string name="cat_extras">Extras</string>
    <string name="cat_sides">Sides</string>
    <string name="name_chicken_caesar_sandwich">Chicken Caesar Sandwich</string>
    <string name="name_pbj">PB&amp;J</string>
    <string name="name_turkey_sandwich">Turkey Sandwich</string>
    <string name="name_veggie_wrap">Veggie Wrap</string>
    <string name="name_grilled_cheese">Grilled Cheese w/ Tomato Soup</string>
    <string name="name_garden_salad_chix">Garden Salad w/ Chicken Noodle Soup</string>
    <string name="name_half_chix_salad">½ Chicken Salad w/ Chips &amp; Drink</string>
    <string name="name_soda">Soda</string>
    <string name="name_orange_juice">Orange Juice</string>
    <string name="name_coffee">Coffee</string>
    <string name="name_chix_noodle">Chicken Noodle Soup</string>
    <string name="name_broccoli_cheddar">Broccoli Cheddar</string>
    <string name="name_garden_salad_half">Garden Salad</string>
    <string name="name_garden_salad_full">Garden Salad</string>
    <string name="name_caesar_salad">Caesar Salad</string>
    <string name="name_chix_salad">Chicken Salad</string>
    <string name="name_avocado">Avocado</string>
    <string name="name_extra_cheese">Extra Cheese</string>
    <string name="name_french_fries">French Fries</string>
    <string name="name_chips">Chips</string>
    <string name="name_cookie">Cookie</string>
    <string name="desc_rye">Rye</string>
    <string name="desc_wheat">Wheat</string>
    <string name="desc_white">White</string>
    <string name="desc_pita">Pita</string>
    <string name="desc_small">Small</string>
    <string name="desc_unlimited_refills">Unlimited Refills</string>
    <string name="desc_cup">Cup</string>
    <string name="desc_bread_bowl">Bread Bowl</string>
    <string name="desc_half">Half</string>
    <string name="desc_full">Full</string>
    <string name="desc_cheddar">Cheddar</string>
    <string name="desc_regular">Regular</string>
    <string name="desc_bbq">BBQ</string>
    <string name="desc_chocolate_chip">Chocolate Chip</string>
    <string name="tag_vegetarian">Vegetarian</string>
    <string name="tag_monday">Monday</string>
    <string name="tag_wednesday">Wednesday</string>
    <string name="tag_friday">Friday</string>
    <string name="tag_add_ons">Add-Ons</string>
    <string name="tag_dessert">Dessert</string>
    <string name="filter_item_add_ons">Add-Ons</string>
    <string name="filter_item_chicken">Chicken</string>
    <string name="rule_chicken">Chicken</string>
    <string name="rule_add_ons">Add-Ons</string>
    <string name="filter_trans_cash">Cash Sales</string>
    <string name="filter_trans_credit">Credit Card Sales</string>
    <string name="filter_item_dress">Dress Items</string>
    <string name="filter_item_blue">Blue Items</string>
    <string name="rule_dress">Dress</string>
    <string name="rule_blue">Blue</string>
    <string name="pa_receipt_name">"Sammy's Café"</string>
    <string name="pa_receipt_address">1234 Main Street</string>
    <string name="pa_receipt_city">Anywhere</string>
    <string name="pa_receipt_state">MI</string>
    <string name="pa_receipt_zip">48000</string>
    <string name="pa_receipt_phone">919–555–0199</string>
    <string name="pa_receipt_web">sammyscafenc.com</string>
    <string name="pa_receipt_email">info@sammyscafenc.com</string>
    <string name="pa_receipt_message">Thank you for visiting! Please come again.\\n\\nOpen for Lunch M-F 11 AM - 3 PM\\nSat-Sun 11 AM - 2 PM</string>
    <string name="pa_receipt_disclaimer">Gratuities not included.</string>
    <string name="pa_receipt_footer">"Accept credit cards on your phone or tablet
Visit PayAnywhere.com to learn more"</string>
    <string name="pa_receipt_country">USA</string>
    <string name="total">Total</string>
    <string name="invoice_num">Auto-Generate Invoice #</string>
    <string name="confirm">confirm</string>
    <string name="default_money">$0.00</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="amount_com">Amount:</string>
    <string name="card_com">Card#:</string>
    <string name="name_com">Name:</string>
    <string name="expiry_date_com">Expiry Date:</string>
    <string name="status_com">Status:</string>
    <string name="call_your_bank">Please call your bank</string>
    <string name="amount">Amount</string>
    <string name="trans_type_com">Type:</string>
    <string name="approved">Approved</string>
    <string name="no_device_detected">Plug your device.</string>
    <string name="device_ready">Press to start.</string>
    <string name="decline">Decline</string>
    <string name="cashback_amount">Cashback</string>
    <string name="start">Start</string>
</resources>