<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/call_your_bank" />
	
	<TextView
	    android:id="@+id/panTextView"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <Button
		    android:id="@+id/approvedButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/approved" />
		
		<Button
		    android:id="@+id/declinedButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/decline" />
		
		<Button
		    android:id="@+id/cancelButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/cancel" />
	</LinearLayout>
	    
</LinearLayout>