<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/credit_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip" >

        <EditText
            android:id="@+id/receipt_first_name"
            style="@style/EditTextBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_weight="1.0"
            android:hint="@string/first_name_hint"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/receipt_last_name"
            style="@style/EditTextBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_weight="1.0"
            android:hint="@string/last_name_hint"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:nextFocusForward="@+id/receipt_invoice_number"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/receipt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="10.0dip"
        android:text="4/8/2013" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/total"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:id="@+id/receipt_total"
        style="@style/EditTextBackground"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="$10.00"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/invoice_num"
        android:textAppearance="?android:textAppearanceSmall" />

    <EditText
        android:id="@+id/receipt_invoice_number"
        style="@style/EditTextBackground"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="35.0sp" />

</LinearLayout>